{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 141,
  "lineage": "2cb9e42d-c9b7-2056-39e4-a53298091632",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ityourway-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:internet-gateway/igw-09d6f5380faba8bc8",
            "id": "igw-09d6f5380faba8bc8",
            "owner_id": "905418246929",
            "vpc_id": "vpc-02c3cec76e5a8c94f"
          },
          "dependencies": [
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ityourway-devops-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418246929:loadbalancer/app/ityourway-lb/eb019e48b98ac740",
            "arn_suffix": "app/ityourway-lb/eb019e48b98ac740",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ityourway-lb-1926802636.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418246929:loadbalancer/app/ityourway-lb/eb019e48b98ac740",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ityourway-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0143eabc975cab278"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072785e7d79c03424"
              },
              {
                "subnet_id": "subnet-07a8d148f08f21965"
              }
            ],
            "subnets": [
              "subnet-072785e7d79c03424",
              "subnet-07a8d148f08f21965"
            ],
            "vpc_id": "vpc-02c3cec76e5a8c94f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ityourway-sg",
            "aws_subnet.ityourway-sub-a",
            "aws_subnet.ityourway-sub-b",
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ityourway-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:security-group/sg-0143eabc975cab278",
            "description": "Allow inbound and outbound traffic",
            "egress": [],
            "id": "sg-0143eabc975cab278",
            "ingress": [],
            "name": "ityourway-eng",
            "name_prefix": "",
            "owner_id": "905418246929",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c3cec76e5a8c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ityourway-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:subnet/subnet-07a8d148f08f21965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8d148f08f21965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418246929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c3cec76e5a8c94f"
          },
          "dependencies": [
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ityourway-sub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:subnet/subnet-072785e7d79c03424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072785e7d79c03424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418246929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c3cec76e5a8c94f"
          },
          "dependencies": [
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ityourway-vp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:vpc/vpc-02c3cec76e5a8c94f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07170273101590d03",
            "default_route_table_id": "rtb-0ba87331266382c46",
            "default_security_group_id": "sg-0769f1153dcf74b26",
            "dhcp_options_id": "dopt-09518d6fd647dd41d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c3cec76e5a8c94f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba87331266382c46",
            "owner_id": "905418246929"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ityourway-sg-",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:security-group-rule/sgr-0e7dcc2cc37b39675",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e7dcc2cc37b39675",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0143eabc975cab278",
            "security_group_rule_id": "sgr-0e7dcc2cc37b39675",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ityourway-sg",
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ityourway-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418246929:security-group-rule/sgr-02741135c2c3d17a0",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02741135c2c3d17a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0143eabc975cab278",
            "security_group_rule_id": "sgr-02741135c2c3d17a0",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ityourway-sg",
            "aws_vpc.ityourway-vp"
          ]
        }
      ]
    }
  ]
}